Worked on the collapsing of the navbar when clicking on the links, still need to solve the link internal problem

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -17,9 +17,12 @@ body {
   background-color: $primary-color !important;
   color: white;
   
-
   #name {
-    font-size: 1.8em;
+    font-size: 2em;
+  }
+
+  span {
+    display: block;
   }
 }
 
@@ -173,12 +176,6 @@ footer {
 
 
 @media (min-width: 769px){
-
-  .navbar{
-    #name {
-      font-size: 2em;
-    }
-  }
     
   .core {
     display: block;
@@ -215,6 +212,7 @@ footer {
 @media (min-width: 993px){
 
   .navbar{
+    position: static !important;
     #name {
       font-size: 2.2em;
     }
